add image index

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -37,7 +37,7 @@
         </div>
       </div>
       <nav>
-        <button class="btn">comenzar</button>
+        <button class="btn"><a href=""></a>comenzar</button>
       </nav>
     </div>
   </main>
