--- a/src/html/cards.html
+++ b/src/html/cards.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Adalab Web Starter Kit</title>
-    <link rel="stylesheet" href="./assets/css/main.css" />
-    <link rel="icon" href="#" />
-  </head>
 
-  <body>
-      <include src="./partials/partials__cards/header.html"></include>
-      <include src="./partials/partials__cards/mainpage.html"></include>
-      <include src="./partials/footer.html"></include>
-    </div>
-    <!-- <script src="./assets/js/main.js"></script> -->
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@600&family=Open+Sans:wght@300&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
+  <title>Awesome profile cards</title>
+  <link rel="stylesheet" href="./assets/css/main.css" />
+  <link rel="icon" href="#" />
+</head>
+
+<body>
+  <include src="./partials/partials__cards/header.html"></include>
+  <include src="./partials/partials__cards/mainpage.html"></include>
+  <include src="./partials/footer.html"></include>
+  </div>
+  <!-- <script src="./assets/js/main.js"></script> -->
+</body>
+
 </html>
