--- a/src/html/cards.html
+++ b/src/html/cards.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Adalab Web Starter Kit</title>
+    <title>Awesome Profile-Cards</title>
+    <script src="https://kit.fontawesome.com/6d96c5eb08.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link rel="icon" href="#" />
   </head>
