add form styles

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,4 +1,4 @@
-<include src="./partials/head.html" title="Awsome profile-cards"></include>
+<include src="./partials/head.html" title="Awesome profile-cards"></include>
 
 <body>
   <main class="main">
