--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,9 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@600&family=Open+Sans:wght@300&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@600&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     integrity="sha384AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/main.css">
@@ -19,7 +17,7 @@
 <body>
   <main class="main">
     <div class="container">
-      <img src="./assets/images/Tarjetas-molonas.svg" alt="">
+      <img  class="tarjeta" src="./assets/images/Tarjetas-molonas.svg" alt="tarjetas molonas">
       <h2 class="main__title">Crea tu tarjeta de visita</h2>
       <p class="main__subtitle">Crea mejores contactos profesionales de forma fácil y cómoda.</p>
       <div class="icons">
@@ -37,7 +35,7 @@
         </div>
       </div>
       <nav>
-        <button class="btn"><a href=""></a>comenzar</button>
+        <button class="btn"><a href="">comenzar</a></button>
       </nav>
     </div>
   </main>
