--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,52 +1,3 @@
-<<<<<<< HEAD
-<!DOCTYPE html>
-<html lang="es">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@600&family=Open+Sans:wght@300&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-    integrity="sha384AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
-  <link rel="stylesheet" href="./assets/css/main.css">
-  <link rel="icon" href="#" />
-  <title>Project Module 2</title>
-</head>
-
-<body>
-  <main class="main">
-    <div class="container">
-      <img src="./assets/images/Tarjetas-molonas.svg" alt="">
-      <h2 class="main__title">Crea tu tarjeta de visita</h2>
-      <p class="main__subtitle">Crea mejores contactos profesionales de forma fácil y cómoda.</p>
-      <div class="icons">
-        <div class="icons__content">
-          <i class="far fa-object-ungroup"></i>
-          <p class="icons__content-design">Diseña</p>
-        </div>
-        <div class="icons__content">
-          <i class="far fa-keyboard"></i>
-          <p class="icons__content-fild">Rellena</p>
-        </div>
-        <div class="icons__content1">
-          <i class="fas fa-share-alt"></i>
-          <p class="icons__content1-share">Comparte</p>
-        </div>
-      </div>
-      <nav>
-        <button class="btn"><a href="cards.html">comenzar</a></button>
-      </nav>
-    </div>
-  </main>
-  <include src="./partials/footer.html"></include>
-  <!-- <script src="./assets/js/main.js"></script> -->
-</body>
-
-=======
 <include src="./partials/head.html" title="Awsome profile-cards"></include>
 
 <body>
@@ -70,7 +21,7 @@
         </div>
       </div>
       <nav>
-        <button class="btn"><a href=""></a>comenzar</button>
+        <button class="btn"><a href="cards.html"></a>comenzar</button>
       </nav>
     </div>
   </main>
@@ -78,5 +29,4 @@
   <!-- <script src="./assets/js/main.js"></script> -->
 </body>
 
->>>>>>> e8873056b51ae3d26b465e251c44c3d24ef797f3
 </html>
