updat button landin

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <nav>
-        <button class="btn"><a href="cards.html"></a>comenzar</button>
+       <a href="cards.html" class="btn">comenzar</a>
       </nav>
     </div>
   </main>
