change space 2 columns

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <nav>
-        <button class="btn"><a href="cards.html"></a>comenzar</button>
+        <a class="btn" href="cards.html">Comenzar</a>
       </nav>
     </div>
   </main>
