--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,7 +2,7 @@
 
 <body>
   <main class="main">
-    <div class="container">
+    <div class="container1">
       <img  class="tarjeta" src="./assets/images/Tarjetas-molonas.svg" alt="tarjetas molonas">
       <h2 class="main__title">Crea tu tarjeta de visita</h2>
       <p class="main__subtitle">Crea mejores contactos profesionales de forma fácil y cómoda.</p>
