add collapsable headers

--- a/src/html/cards.html
+++ b/src/html/cards.html
@@ -5,7 +5,7 @@
   <include src="./partials/partials__cards/mainpage.html"></include>
   <include src="./partials/footer.html"></include>
   </div>
-  <!-- <script src="./assets/js/main.js"></script> -->
+  <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
