update responsive mobile index

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <nav class="btn">
-       <a href="cards.html" class="start" >comenzar</a>
+       <a href="cards.html" class="start">Comenzar</a>
       </nav>
     </div>
   </main>
