update responsive tablet-desktop all

--- a/src/html/cards.html
+++ b/src/html/cards.html
@@ -1,10 +1,11 @@
 <include src="./partials/head.html" title="Create your card"></include>
 
 <body>
-  <include src="./partials/partials__cards/header.html"></include>
-  <include src="./partials/partials__cards/mainpage.html"></include>
-  <include src="./partials/footer.html"></include>
-  </div>
+  <main class="cards__main--wrapper">
+    <include src="./partials/partials__cards/header.html"></include>
+    <include src="./partials/partials__cards/mainpage.html"></include>
+    <include src="./partials/footer.html"></include>
+  </main>
   <script src="./assets/js/main.js"></script>
 </body>
 
