refactor: reorder partials into folders

--- a/src/html/cards.html
+++ b/src/html/cards.html
@@ -3,7 +3,7 @@
 <body>
   <main class="cards__main--wrapper">
     <include src="./partials/partials__cards/header.html"></include>
-    <include src="./partials/partials__cards/mainpage.html"></include>
+    <include src="./partials/mainpage.html"></include>
     <include src="./partials/footer.html"></include>
   </main>
   <script src="./assets/js/main.js"></script>
