expand click on the start link

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -22,7 +22,7 @@
           </div>
         </div>
         <nav class="btn">
-         <a href="cards.html" class="start">Comenzar</a>
+         <a class="click" href="cards.html" class="start">Comenzar</a>
         </nav>
       </div>
     </main>
